[SYNC] commit last changes

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,62 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>EmTii SEO</title>
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+        <!-- Custom styles for this template -->
+        <link href="../resources/css/navbar-static-top.css" rel="stylesheet">
     </head>
     <body>
-        foobar!
+
+        <!-- Static navbar -->
+        <nav class="navbar navbar-default navbar-static-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Em Tii SEO</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#meta">Meta</a></li>
+                        <li><a href="#headers">Headers</a></li>
+                        <li><a href="#images">Images</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container">
+
+            <!-- Main component -->
+            <div class="jumbotron">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <span class="badge">1</span> <!-- Count of found H1 Tags in HTML -->
+                        <span class="bold">H1 </span> <!-- Found H1 String -->
+                    </li>
+                    <li class="list-group-item">
+                        <span class="badge">2</span> <!-- Count of found H2 Tags in HTML -->
+                        <span class="bold">H2 </span> <!-- Found H2 String -->
+
+                    </li>
+                    <li class="list-group-item">
+                        <span class="badge">3</span> <!-- Count of found H3 Tags in HTML -->
+                        <span class="bold">H3 </span> <!-- Found H3 String -->
+                    </li>
+                    <li class="list-group-item">
+                        <span class="badge">4</span> <!-- Count of found H4 Tags in HTML -->
+                        <span class="bold">H4 </span> <!-- Found H4 String -->
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     </body>
 </html>
